354 make bciphaseinstance implement processinstance interface2 (#428)
* BCIPhaseInstance now implements ProcessInstance, renamed blocks to activities

* BCIPhaseInstance now implements ProcessInstance, renamed blocks to activities

* Updated tests and added test to test BCIPhaseInstance

* Changed getBlocks() to getActivities()